@@ -1,3 +1,5 @@
+* Remove unneeded IE8 RC1 fork in Fuse.List.fromNodeList(). [Diego Perini]
+
 * Optimize Fuse.Template by converting the pattern once during instanciation. [jddalton, Samuel Lebeau]
 
 * Make Fuse.String#stripTags more closely follow the W3C specification. [Prototype LH #674] [igor, jddalton, kangax]
